Ignore BaseParser in PHPUnit code coverage

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -15,6 +15,7 @@
       <exclude>
         <directory suffix=".php">lib/Themer/Test</directory>
         <file>lib/Themer/Autoloader.php</file>
+        <file>lib/Themer/Parser/BaseParser.php</file>
       </exclude>
     </whitelist>
   </filter>
