Add 'lang' back to defaults.yml

--- a/lib/Themer/data/defaults.yml
+++ b/lib/Themer/data/defaults.yml
@@ -37,6 +37,9 @@ TwitterUsername:    ''
 # Posts
 Posts: []
 
+# Localizations
+lang: []
+
 #------------------------------------------
 # Themer Configurations (private variables)
 #------------------------------------------
