--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<phpunit
-  bootstrap="test/bootstrap.php"
-  colors="true"
-  stopOnFailure="false">
+
+<phpunit  bootstrap="test/bootstrap.php"
+          colors="true"
+          stopOnFailure="false">
+
   <logging>
-    <log
-      type="coverage-html" 
-      target="build/coverage"
-      yui="true" />
+    <log  type="coverage-html" 
+          target="build/coverage"
+          yui="true" />
   </logging>
+
   <filter>
     <whitelist addUncoveredFilesFromWhitelist="true">
       <directory suffix=".php">lib</directory>
@@ -19,7 +20,10 @@
       </exclude>
     </whitelist>
   </filter>
+
   <testsuites>
-    <directory suffix="Test.php">test/Themer</directory>
+    <testsuite name="Themer Test Suite">
+      <directory suffix="Test.php">test/Themer</directory>
+    </testsuite>
   </testsuites>
 </phpunit>
